# cardwise

./: .gitignore  CLAUDE.md  CardWise_RAG_Project.docx  OVERVIEW.md  README.md  app.py  models.py  pyproject.toml  scoring.py
.streamlit/: config.toml
components/: card_detail.py  card_grid.py  chat.py  ingest.py  quiz.py
data/: cards.json
data/statements/alice/: 2025-12.json  2026-01.json  2026-02.json  2026-03.json  2026-04.json  2026-05.json
data/statements/bob/: 2025-12.json  2026-01.json  2026-02.json  2026-03.json  2026-04.json  2026-05.json
data/statements/carol/: 2025-12.json  2026-01.json  2026-02.json  2026-03.json  2026-04.json  2026-05.json
notebooks/: rag_01_indexing.ipynb  rag_02_chain.ipynb
rag/: chain.py  retriever.py
scripts/: generate_doc.py  generate_statements.py  index_statements.py
