[project]
name = "cardwise"
version = "0.1.0"
description = "Credit card offers and deals tracker"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "chromadb>=1.5.9",
    "openai>=2.41.1",
    "python-dotenv>=1.2.2",
    "ipykernel>=7.3.0",
    "python-docx>=1.2.0",
]

[tool.uv]
package = false
